# treatSens

./: .Rbuildignore  .gitignore  DESCRIPTION  MD5  NAMESPACE  README.md  Read-and-delete-me  cleanup  configure  configure.ac  configure.win  test.treatSens.R
R/: BART.sens.test.RData  BART_SA.R  BART_cont.R  BART_sens.R  Clarke_code.R  GLM_sens.R  GLM_sens_old.R  LMER_sens.R  OLS_sens.R  SWAY_ex_for_Joel.R  X_partials.R  bart_test.R  bart_test.RData  calc_range.R  causalSA-internal.R  cibart.R  cibart_treatmentModel.R  cont_binary_mlm_stan.R  deprecated.R  genU_binYZU.R  genU_contY.R  genU_contY_coef.R  genU_contY_general.R  genU_contY_se.R  grid_range.R  grid_range_cont.R  guessNumCores.R  housekeeping.R  imbens.R  imbensNBC.R  imbensNBC_varyP.R  multipleAssignment.R  normal_binary_comparison.xlsx  object_def.R  plotSA.R  plotSA2.R  point_GLM_sens.R  point_OLS_sens.R  prof_likelihood_plot.R  progress_check_list.xlsx  (+25 more)
data/: lalonde data.dta
exec/: cont_binary_mlm.stan
inst/: CITATION
inst/extdata/: lalonde.RData
man/: GLMsens.Rd  causalSA-internal.Rd  causalSA-package.Rd  fitGLMsens.Rd  imbens.Rd  plotSA.Rd  sensPlot.Rd  summary.Rd  treatSens-internal.Rd  treatSens-package.Rd  treatSens.Rd  treatSensBART.Rd  treatSensMLM.Rd
src/: Makevars.in  Makevars.win  R_interface.cpp  bartTreatmentModel.cpp  bartTreatmentModel.hpp  config.hpp.in  config.hpp.win  guessNumCores.cpp  guessNumCores.hpp  probitEMTreatmentModel.cpp  probitEMTreatmentModel.hpp  probitTreatmentModel.cpp  probitTreatmentModel.hpp  sensitivityAnalysis.cpp  sensitivityAnalysis.hpp  treatmentModel.hpp
src/glm/: Makefile  glm.c
src/include/glm/: glm.h
src/misc/: Makefile  config.h.in  config.h.win  hierarchicalThreadManager.c  simd.c
src/stan_files/pre/: license.stan
tests/: test-all.R  test.treatSens.R  testthat.R
tests/testthat/: test-02-cibartTreatmentModel.R  test-03-continuous.R  test-04-binary.R
